--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tuvshin candy shop</title>
+   <link rel="stylesheet" href="./IDUK.CSS">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="consirve">
+        <div class="a">
+            <div class="one">
+                <div style="display: flex; justify-content: center; align-items: center; height: 20%; width: 100%;">
+                    <h1>Log in? register?
+                    <a href="./logindjorhheseg.html">
+                        <i class="fa fa-sign-out" aria-hidden="true"></i>
+                    </a>
+                    </h1>
+                </div>
+                <div style="height: 20%; width: 100%; display: flex; justify-content: center; align-items: center;">
+                    <h1>Buy Vip
+                    <a href="https://realskydecay-glowing-orbit-9vpqj6xrq5pfx64p-5500.preview.app.github.dev/buyvip.html">
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    </a>
+                    </h1>
+                </div>
+                <div style="height: 20%; width: 100%; display: flex; justify-content: center; align-items: center;">
+                    <h1>Buy Vip+
+                    <a href="https://realskydecay-glowing-orbit-9vpqj6xrq5pfx64p-5500.preview.app.github.dev/buyvip+.html">
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    </a>
+                    </h1>
+                </div>
+                <div style="height: 20%; width: 100%; display: flex; justify-content: center; align-items: center;">
+                    <h1>About us
+                    <a href="https://realskydecay-glowing-orbit-9vpqj6xrq5pfx64p-5500.preview.app.github.dev/aboutus.html">
+                        <i class="fa fa-users" aria-hidden="true"></i>
+                    </a>
+                    </h1>
+                </div>
+                <div style="height: 20%; width: 100%; display: flex; justify-content: center; align-items: center;">
+                    <h1>Contact us
+                    <a href="./contactus.html">
+                        <i class="fa fa-mobile" aria-hidden="true"></i>
+                    </a>
+                    </h1>
+                </div>
+            </div>
+            <div class="two">
+                <div class="three">
+                    <div class="nerd">
+                        <h1>Ontsloh baraa</h1>
+                    <h1>Kit kat limited edition</h1>
+                    <h1> only vip</h1>
+                    <img style="height:300px ; width: 450px;"  src="./depositphotos_227725020-stock-illustration-image-available-icon-flat-vector.jpg" alt="">
+                    </div>
+                    <div class="starbush">
+                        <h1>Ontsloh baraa</h1>
+                        <h1>m&m(red) limited edition</h1>
+                        <h1> only vip+</h1>
+                        <h1>
+                            <img  style="height: 300px; width: 450px;" src="./depositphotos_227725020-stock-illustration-image-available-icon-flat-vector.jpg" alt="">
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        </h1>
+                    </div>
+                </div>
+                <div class="four">
+                    <div class="d">
+                        <div class="six">
+                            <div class="sixhalf">
+                                <img src="iduk_images/skittles green iduk.jpg" alt="" class="skittles_green">
+                            </div>
+                            <div class="sixhalf2">
+                                <a href="./skittlesgreenpayment.html">
+                                    <i class="fa fa-shopping-cart" aria-hidden="true" style="font-size: xx-large; color: blue;"></i>
+                                </a>
+                                <div style="margin-left: 10px;">
+                                    <h2>Skittles(green)</h2>
+                                    <p style="font-size: 25px;">Price=30$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="e">
+                        <div class="eight">
+                           <img style="height: 185px; width: 250px;" src="./SkittlesRed.jpg" alt="ru serios">
+                        </div>
+                        <div class="nine">
+                            <a href="./redskittlesred.html">
+                                <i class="fa fa-shopping-cart" style="font-size: xx-large; color: blue;"></i>
+                               </a>
+                            <div style="margin-left: 10px;">
+                                <h2>Skittles(red)</h2>
+                                <p style="font-size: 25px;">Price=29$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="f">
+                        <div class="f-h">
+                            <img style="height: px; width: px;" src="iduk_images/kitkat.jpg" alt="">
+                        </div>
+                        <div class="f-h2">
+                            <a href="./kitkatpayment.html">
+                                <i class="fa fa-shopping-cart" style="font-size: xx-large; color: blue;"></i>
+                            </a>
+                            <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; width: 75%;">
+                                <h2>kit kat</h2>
+                               <p style="font-size: 25px;">Price 15$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="g">
+                        <div class="vip">
+                            <h1 style="color: black;">Vip</h1>
+                            <h1 style="color: black;">Year=10000$</h1>
+                            <h1 style="color: black;">Month=5000$</h1>
+                            <h1 style="color: black;">Week=100$</h1>
+                            <button style="font-size: xx-large;" >Buy</button>
+                        </div>
+                    </div>
+                    <div class="h">
+                        <h1 style="color: black;">Vip+</h1>
+                        <h1 style="color: black;">Year=100000$</1>
+                        <h1 style="color: black;">Month=50000$</h1>
+                        <h1 style="color: black;">Week=1000$</h1>
+                        <button style="font-size: xx-large;" >Buy</button>
+                        <div class="fifteen"></div>
+                        <div class="sixteen"></div>
+                    </div>
+                </div>
+                <div class="five"></div>
+            </div>
+        </div>
+    </div>
+    <script src="./script.js"></script>
+</body>
+</html>
